; ModuleID = '/home/carl/AnghaBench/libgit2/tests/commit/extr_write.c_test_commit_write__attach_singleline_signature.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/commit/extr_write.c_test_commit_write__attach_singleline_signature.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"magic word: pretty please\00", align 1
@.str.1 = private unnamed_addr constant [241 x i8] c"tree 4b825dc642cb6eb9a060e54bf8d69288fbee4904\0Aparent 8496071c1b46c854b31185ea97743be6a8774479\0Aauthor Ben Burkert <ben@benburkert.com> 1358451456 -0800\0Acommitter Ben Burkert <ben@benburkert.com> 1358451456 -0800\0A\0Aa simple commit which works\0A\00", align 1
@.str.2 = private unnamed_addr constant [276 x i8] c"tree 4b825dc642cb6eb9a060e54bf8d69288fbee4904\0Aparent 8496071c1b46c854b31185ea97743be6a8774479\0Aauthor Ben Burkert <ben@benburkert.com> 1358451456 -0800\0Acommitter Ben Burkert <ben@benburkert.com> 1358451456 -0800\0Amagicsig magic word: pretty please\0A\0Aa simple commit which works\0A\00", align 1
@g_repo = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [9 x i8] c"magicsig\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_commit_write__attach_singleline_signature() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  store i8* getelementptr inbounds ([241 x i8], [241 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  store i8* getelementptr inbounds ([276 x i8], [276 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  %7 = load i32, i32* @g_repo, align 4
  %8 = load i8*, i8** %2, align 8
  %9 = load i8*, i8** %1, align 8
  %10 = call i32 @git_commit_create_with_signature(i32* %4, i32 %7, i8* %8, i8* %9, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0))
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32, i32* @g_repo, align 4
  %13 = call i32 @git_repository_odb(i32** %5, i32 %12)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @git_odb_read(i32** %6, i32* %15, i32* %4)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load i8*, i8** %3, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @git_odb_object_data(i32* %19)
  %21 = call i32 @cl_assert_equal_s(i8* %18, i32 %20)
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @git_odb_object_free(i32* %22)
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @git_odb_free(i32* %24)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_commit_create_with_signature(i32*, i32, i8*, i8*, i8*) #1

declare dso_local i32 @git_repository_odb(i32**, i32) #1

declare dso_local i32 @git_odb_read(i32**, i32*, i32*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_odb_object_data(i32*) #1

declare dso_local i32 @git_odb_object_free(i32*) #1

declare dso_local i32 @git_odb_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
